--- a/Classes/Classes.csproj
+++ b/Classes/Classes.csproj
@@ -41,10 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MouseClickMessage.cs" />
-    <Compile Include="KeyUpMessage.cs" />
-    <Compile Include="MouseMoveMessage.cs" />
-    <Compile Include="ServerMessage.cs" />
+    <Compile Include="Classes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
