--- a/Server/packages.config
+++ b/Server/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="LiteNetLib" version="0.9.5.2" targetFramework="net481" />
   <package id="MouseKeyHook" version="5.6.0" targetFramework="net481" />
-  <package id="SuperSimpleTcp" version="3.0.10" targetFramework="net481" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net481" />
 </packages>
