--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{54980821-3B13-495B-A6D5-0D06EBDA0BD2}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>D2RApp</RootNamespace>
-    <AssemblyName>D2RApp</AssemblyName>
+    <RootNamespace>D2RClient</RootNamespace>
+    <AssemblyName>D2RClient</AssemblyName>
     <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -47,6 +47,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>D2RApp.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Gma.System.MouseKeyHook, Version=5.6.130.0, Culture=neutral, processorArchitecture=MSIL">
@@ -121,6 +124,9 @@
       <Project>{f80490fc-cdf2-4ca9-974f-281eef333bb0}</Project>
       <Name>Classes</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="D2RApp.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
